Fixed navbar collapse

--- a/assets/css/site/style.css
+++ b/assets/css/site/style.css
@@ -1,7 +1,9 @@
-/*
-	@author Can Designs
-	@url: http://candesigns.de;
-*/
+/**
+ * @copyright 	2016 Can Designs
+ * @name 		Admina
+ * @author 		http://candesigns.de
+ * @version		1.1
+ */
 * {
 	outline: none !important;
 }
@@ -312,8 +314,13 @@ nav .text-sm {
 .bg-white .nav-collapse > li > a {
 	background: #f5f7f7;
 	color: #617082;
+	text-align: left;
 
 	padding: 15px 43px;
+}
+
+.nav-xs .nav-primary .nav-collapse > li > a {
+	padding: 15px;
 }
 
 .bg-white .nav-collapse > li:active > a,
